make changes to run-test.sh for readibility. typo in package.json

--- a/week7/package.json
+++ b/week7/package.json
@@ -6,7 +6,7 @@
 	"pointerTest": "./run-test.sh ./MemoryAccess/PointerTest",
 	"staticTest": "./run-test.sh ./MemoryAccess/StaticTest",
 	"simpleAdd": "./run-test.sh ./StackArithmetic/SimpleAdd",
-	"stackTest": "./run-test ./StackArithmetic/StackTest",
+	"stackTest": "./run-test.sh ./StackArithmetic/StackTest",
 	"test-all": "npm run basicTest; npm run pointerTest; npm run staticTest; npm run simpleAdd; npm run stackTest;"
     }
 }
