need the extra slash so that the contents only are copied

--- a/week7/package.json
+++ b/week7/package.json
@@ -2,11 +2,11 @@
     "name": "n2tweek7",
     "type": "module",
     "scripts": {
-	"basicTest": "./run-test.sh ./MemoryAccess/BasicTest",
-	"pointerTest": "./run-test.sh ./MemoryAccess/PointerTest",
-	"staticTest": "./run-test.sh ./MemoryAccess/StaticTest",
-	"simpleAdd": "./run-test.sh ./StackArithmetic/SimpleAdd",
-	"stackTest": "./run-test.sh ./StackArithmetic/StackTest",
+	"basicTest": "./run-test.sh ./MemoryAccess/BasicTest/",
+	"pointerTest": "./run-test.sh ./MemoryAccess/PointerTest/",
+	"staticTest": "./run-test.sh ./MemoryAccess/StaticTest/",
+	"simpleAdd": "./run-test.sh ./StackArithmetic/SimpleAdd/",
+	"stackTest": "./run-test.sh ./StackArithmetic/StackTest/",
 	"test-all": "npm run basicTest; npm run pointerTest; npm run staticTest; npm run simpleAdd; npm run stackTest;"
     }
 }
